force-app/main/default/objects/Hotel_Room_Option__c/Hotel_Room_Option__c.object-meta.xml
<CustomObject>
    <label>Hotel Room Code &amp; Option</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Hotel Room &amp; Option</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotels Rooms &amp; Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>