force-app/main/default/objects/Hotel_Room_Option__c/fields/MaxRoomoccupation__c.field-meta.xml
<CustomField>
    <fullName>MaxRoomoccupation__c</fullName>
    <label>Max Room occupation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>