force-app/main/default/objects/Hotel_Room_Option__c/fields/Room_Code__c.field-meta.xml
<CustomField>
    <fullName>Room_Code__c</fullName>
    <label>Room Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>