force-app/main/default/objects/Hotel_Room_Option__c/fields/Room_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>Room_Code_ID__c</fullName>
    <label>Room Code ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>