force-app/main/default/objects/Hotel_Room_Option__c/fields/Room_Code_Label__c.field-meta.xml
<CustomField>
    <fullName>Room_Code_Label__c</fullName>
    <label>Room Code Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>