force-app/main/default/objects/Hotel_Room_Option__c/fields/Room_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Room_Type_Label__c</fullName>
    <label>Room Type Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>