force-app/main/default/objects/Hotel_Room_Option__c/fields/Type_code__c.field-meta.xml
<CustomField>
    <fullName>Type_code__c</fullName>
    <label>Type code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Room</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>