force-app/main/default/objects/Hotel_Room_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Room_Code__c</columns>
    <columns>Room_Code_Label__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Room_Type_Label__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>